<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diablo 3 Armory</string>
    <string name="action_settings">Settings</string>
    <string name="hero_text">Enter your battletag</string>
    <string name="button_submit">Search</string>
    <string name="title_activity_search_hero">SearchHeroActivity</string>
    <string name="na_region_string">Americas (NA)</string>
    <string name="eu_region_string">Europe (EU)</string>
    <string name="tw_region_string">Taiwan (TW)</string>
    <string name="kr_region_string">Korea (KR)</string>
    <string name="na_region_url">http://us.battle.net</string>
    <string name="eu_region_url">http://eu.battle.net</string>
    <string name="tw_region_url">http://tw.battle.net</string>
    <string name="kr_region_url">http://kr.battle.net</string>
    <string name="invalid_battletag_format">Invalid battletag format!</string>
    <string name="valid_battletag_format_blurb">Valid formats are:\n* hero#1234\n* hero-1234</string>
    <string name="ok">OK</string>
    <string name="profile_loading_message">Profile loading...</string>
    <string name="no_network_available">No network available</string>
    <string name="title_activity_main_activity">Diablo 3 Armory</string>
    <string name="title_activity_hero_list">Hero List</string>
    <string name="title_activity_hero_details">Hero Details</string>
    <string name="title_activity_follower_details">Follower Details</string>
    <string name="title_activity_skill_details">Skill Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_equipment_screen_fragment">EquipmentScreenFragment</string>
    <string name="title_activity_follower_equipment_details">FollowerEquipmentDetailsActivity</string>

    <string name="no_item_equipped">No item equipped</string>
</resources>