<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.somethingnifty.diablo3armory.activity.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/search_hero_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@android:style/Widget.ProgressBar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText android:id="@+id/hero_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hero_text"
            android:inputType="textNoSuggestions"
            android:gravity="center"
            android:maxLines="1"
            android:layout_weight="1" />

        <Button android:id="@+id/button_search_hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:onClick="searchHero"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/regions_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/na_region_radio_button"
        android:layout_below="@+id/text_button_layout"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/na_region_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/na_region_string"/>
        <RadioButton
            android:id="@+id/eu_region_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/eu_region_string"/>
        <RadioButton
            android:id="@+id/tw_region_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tw_region_string"/>
        <RadioButton
            android:id="@+id/kr_region_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/kr_region_string"/>
    </RadioGroup>

</RelativeLayout>
